name:                mu-haskell-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/mu-haskell-sandbox#readme
author:              Chris Birchall
maintainer:          chris.birchall@47deg.com
copyright:           2020 Chris Birchall
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mu-haskell-sandbox
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Schema
  default-language:    Haskell2010
  build-depends:       base >= 4.12 && < 5,
                       text,
                       mu-schema,
                       mu-rpc,
                       mu-protobuf,
                       mu-grpc-server
